welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: type mismatch;
 found   : Unit
 required: Int
  else if(((b<10)||(b>20))&&(a<=20)){
       ^